--- a/index.html
+++ b/index.html
@@ -2,54 +2,50 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Goyery Luxe</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header class="encabezado">
-    <img src="assets/img/logo-goyeryluxe.png" alt="Logo Goyery Luxe" />
-    <h1>Goyery Luxe</h1>
-    <p>Joyas en oro y esmeralda hechas a tu medida</p>
+  <header>
+    <img src="img/logo.png" alt="Logo Goyery Luxe" class="logo" />
+    <h1>Goyery Luxe - Joyería Exclusiva</h1>
+    <p>Joyas en oro y esmeralda hechas a tu gusto</p>
   </header>
 
   <section class="inicio">
     <h2>Inicio</h2>
-    <img src="assets/img/oro_lingotes.jpeg" alt="Lingotes de oro" />
-    <img src="assets/img/esmeralda_diamante.jpeg" alt="Esmeralda en bruto" />
+    <div class="imagenes-inicio">
+      <img src="img/inicio-oro.jpg" alt="Lingotes de oro" />
+      <img src="img/inicio-esmeralda.jpg" alt="Esmeralda natural" />
+    </div>
   </section>
 
   <section class="nosotros">
     <h2>Nosotros</h2>
-    <p>Somos una empresa con más de 30 años de experiencia fabricando joyas únicas con esmeraldas y oro colombiano.</p>
-    <p>Fabricamos tu joya a tu gusto y te damos la posibilidad de personalizar cada detalle.</p>
-    <p>📍 Estamos ubicados en el centro de la ciudad.</p>
-    <p>💬 Contáctanos por <a href="https://wa.me/573155588648" target="_blank">WhatsApp</a> o por <a href="https://www.instagram.com/goyeryluxe" target="_blank">Instagram</a>.</p>
-
-    <div class="videos">
-      <video src="assets/video/video1.mp4" controls></video>
-      <video src="assets/video/video2.mp4" controls></video>
-      <video src="assets/video/video3.mp4" controls></video>
+    <p>Somos una excelente empresa de joyas con más de 30 años en el mercado, haciendo que las personas tengan una esencia diferente al lucir nuestras hermosas joyas.</p>
+    <p>Fabricamos tu joya a tu gusto con oro y esmeralda 100% colombiana.</p>
+    <p>Contáctanos por <a href="https://wa.me/573155588648" target="_blank">WhatsApp</a> o síguenos en <a href="https://www.instagram.com/goyeryluxe" target="_blank">@goyeryluxe</a></p>
+    <div class="videos-nosotros">
+      <video src="video/video1.mp4" controls></video>
+      <video src="video/video2.mp4" controls></video>
+      <video src="video/video3.mp4" controls></video>
     </div>
   </section>
 
   <section class="productos">
     <h2>Productos</h2>
-    <div class="galeria">
-      <a href="https://wa.me/573155588648?text=Hola%2C%20quiero%20este%20producto">
-        <img src="assets/img/producto1.jpeg" alt="Producto 1" />
-      </a>
-      <a href="https://wa.me/573155588648?text=Hola%2C%20quiero%20este%20producto">
-        <img src="assets/img/producto2.jpeg" alt="Producto 2" />
-      </a>
-      <a href="https://wa.me/573155588648?text=Hola%2C%20quiero%20este%20producto">
-        <img src="assets/img/producto3.jpeg" alt="Producto 3" />
-      </a>
+    <div class="galeria-productos">
+      <img src="img/producto1.jpg" alt="Producto 1" onclick="enviarWhatsApp('img/producto1.jpg')" />
+      <img src="img/producto2.jpg" alt="Producto 2" onclick="enviarWhatsApp('img/producto2.jpg')" />
+      <img src="img/producto3.jpg" alt="Producto 3" onclick="enviarWhatsApp('img/producto3.jpg')" />
     </div>
   </section>
 
-  <a href="https://wa.me/573155588648" class="whatsapp-float" target="_blank">
-    <img src="assets/img/whatsapp.png" alt="WhatsApp" />
+  <a href="https://wa.me/573155588648" class="whatsapp-btn" target="_blank">
+    <img src="img/whatsapp.png" alt="WhatsApp" />
   </a>
+
+  <script src="script.js"></script>
 </body>
 </html>
