--- a/index.html
+++ b/index.html
@@ -2,30 +2,39 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Goyery Luxe</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <header>
-    <img src="img/logo.png" alt="Logo Goyery Luxe" class="logo" />
-    <h1>Goyery Luxe - Joyería Exclusiva</h1>
-    <p>Joyas en oro y esmeralda hechas a tu gusto</p>
+    <img src="img/logo-goyeryluxe.png" alt="Logo Goyery Luxe" class="logo" />
+    <h1>Goyery Luxe</h1>
+    <p>Joyas exclusivas en oro y esmeralda</p>
   </header>
 
-  <section class="inicio">
+  <nav>
+    <a href="#inicio">Inicio</a>
+    <a href="#nosotros">Nosotros</a>
+    <a href="#productos">Productos</a>
+  </nav>
+
+  <section id="inicio">
     <h2>Inicio</h2>
+    <p>Celebramos la belleza natural del oro y la esmeralda. Desde la mina hasta tu estilo.</p>
     <div class="imagenes-inicio">
-      <img src="img/inicio-oro.jpg" alt="Lingotes de oro" />
-      <img src="img/inicio-esmeralda.jpg" alt="Esmeralda natural" />
+      <img src="img/esmeralda1.jpeg" alt="Esmeralda">
+      <img src="img/oro1.jpeg" alt="Oro">
     </div>
   </section>
 
-  <section class="nosotros">
+  <section id="nosotros">
     <h2>Nosotros</h2>
-    <p>Somos una excelente empresa de joyas con más de 30 años en el mercado, haciendo que las personas tengan una esencia diferente al lucir nuestras hermosas joyas.</p>
-    <p>Fabricamos tu joya a tu gusto con oro y esmeralda 100% colombiana.</p>
-    <p>Contáctanos por <a href="https://wa.me/573155588648" target="_blank">WhatsApp</a> o síguenos en <a href="https://www.instagram.com/goyeryluxe" target="_blank">@goyeryluxe</a></p>
+    <p>Somos una excelente empresa de joyas con más de 30 años en el mercado, brindando a nuestros clientes una esencia única al lucir nuestras joyas.</p>
+    <p>Ubícanos en nuestras oficinas del centro. Gracias por confiar en <strong>Goyery Luxe</strong>.</p>
+    <p>Fabricamos joyas completamente a tu gusto. Escríbenos por <a href="https://wa.me/573155588648" target="_blank">WhatsApp</a> o contáctanos en <a href="https://www.instagram.com/goyeryluxe" target="_blank">@goyeryluxe</a>.</p>
+
     <div class="videos-nosotros">
       <video src="video/video1.mp4" controls></video>
       <video src="video/video2.mp4" controls></video>
@@ -33,19 +42,27 @@
     </div>
   </section>
 
-  <section class="productos">
+  <section id="productos">
     <h2>Productos</h2>
     <div class="galeria-productos">
-      <img src="img/producto1.jpg" alt="Producto 1" onclick="enviarWhatsApp('img/producto1.jpg')" />
-      <img src="img/producto2.jpg" alt="Producto 2" onclick="enviarWhatsApp('img/producto2.jpg')" />
-      <img src="img/producto3.jpg" alt="Producto 3" onclick="enviarWhatsApp('img/producto3.jpg')" />
+      <a href="https://wa.me/573155588648?text=Hola%20quiero%20este%20producto" target="_blank">
+        <img src="img/producto1.jpeg" alt="Producto 1">
+      </a>
+      <a href="https://wa.me/573155588648?text=Hola%20quiero%20este%20producto" target="_blank">
+        <img src="img/producto2.jpeg" alt="Producto 2">
+      </a>
+      <a href="https://wa.me/573155588648?text=Hola%20quiero%20este%20producto" target="_blank">
+        <img src="img/producto3.jpeg" alt="Producto 3">
+      </a>
+      <!-- Agrega más imágenes con este formato -->
     </div>
   </section>
 
   <a href="https://wa.me/573155588648" class="whatsapp-btn" target="_blank">
-    <img src="img/whatsapp.png" alt="WhatsApp" />
+    <img src="img/whatsapp-gold.png" alt="WhatsApp">
   </a>
 
   <script src="script.js"></script>
 </body>
 </html>
+  
