--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <h2>Nosotros</h2>
         <p>En Goyery Luxe fabricamos joyas a tu gusto. Si estás interesado en una joya personalizada, escríbenos a WhatsApp o por <a href="https://www.instagram.com/goyeryluxe" target="_blank">Instagram</a>.</p>
        <video src="video/1.mp4" controls width="300"></video>
-<video src="video/1.mp4" controls width="300"></video>
-<video src="video/2.mp4" controls width="300"></video>
-<video src="video/3.mp4" controls width="300"></video>
+<video src="video/1.MP4" controls width="300"></video>
+<video src="video/2.MP4" controls width="300"></video>
+<video src="video/3.MP4" controls width="300"></video>
     </section>
 
     <section id="productos">
