--- a/index.html
+++ b/index.html
@@ -20,12 +20,18 @@
     </section>
 
     <section id="nosotros">
-        <h2>Nosotros</h2>
-        <p>En Goyery Luxe fabricamos joyas a tu gusto. Si estás interesado en una joya personalizada, escríbenos a WhatsApp o por <a href="https://www.instagram.com/goyeryluxe" target="_blank">Instagram</a>.</p>
-       <video src="video/1.mp4" controls width="300"></video>
-<video src="video/1.MP4" controls width="300"></video>
-<video src="video/2.MP4" controls width="300"></video>
-<video src="video/3.MP4" controls width="300"></video>
+       <h2>Nosotros</h2>
+  <p>En Goyery Luxe fabricamos joyas a tu gusto. Si estás interesado en una joya personalizada, escríbenos por 
+    <a href="https://wa.me/573155588648" target="_blank">WhatsApp</a> o en 
+    <a href="https://www.instagram.com/goyeryluxe" target="_blank">Instagram @goyeryluxe</a>.
+  </p>
+
+  <div class="videos">
+    <video src="video/video1.MP4" controls width="300"></video>
+    <video src="video/video2.MP4" controls width="300"></video>
+    <video src="video/video3.MP4" controls width="300"></video>
+  </div>
+
     </section>
 
     <section id="productos">
