--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <section id="inicio">
         <h2>Nuestra Historia</h2>
         <p>La esmeralda y el oro son parte de nuestra tradición. Goyery Luxe convierte minerales preciosos en joyas únicas y personalizadas.</p>
-        <img src="img/esmeralda.jpg" alt="Esmeralda">
-        <img src="img/oro.jpg" alt="Oro">
+        <img src=esmeralda.jpg" alt="Esmeralda">
+        <img src=oro.jpg" alt="Oro">
     </section>
 
     <section id="nosotros">
@@ -37,10 +37,10 @@
     <section id="productos">
         <h2>Productos</h2>
         <div class="producto">
-            <img src="img/producto1.jpg" alt="Producto 1">
+            <img src=producto1.jpg" alt="Producto 1">
         </div>
         <div class="producto">
-            <img src="img/producto2.jpg" alt="Producto 2">
+            <img src=producto2.jpg" alt="Producto 2">
         </div>
     </section>
 
