--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
     </section>
 
-    <section id="productos">
+    <section id="productos1">
         <h2>Productos</h2>
-        <div class="producto">
-            <img src=producto1.jpg" alt="Producto 1">
+        <div class="producto2">
+            <img src=producto3.jpg" alt="Producto 1">
         </div>
-        <div class="producto">
+        <div class="producto4">
             <img src=producto2.jpg" alt="Producto 2">
         </div>
     </section>
