--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="img/logo.png" alt="Logo Goyery Luxe" id="logo">
+        <img src=logo.png" alt="Logo Goyery Luxe" id="logo">
         <h1>Bienvenidos a Goyery Luxe</h1>
     </header>
 
