--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <footer>
         <a href="https://wa.me/573155588648" target="_blank">
-            <img src="img/whatsapp.png" alt="WhatsApp" style="width:50px;">
+            <img src=whatsapp.png" alt="WhatsApp" style="width:50px;">
         </a>
     </footer>
 </body>
