--- a/index.html
+++ b/index.html
@@ -1,53 +1,72 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Goyery Luxe</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Goyery Luxe</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <img src=logo.png" alt="Logo Goyery Luxe" id="logo">
-        <h1>Bienvenidos a Goyery Luxe</h1>
-    </header>
+  <header>
+    <img src="logo-negro.png" alt="Logo Goyery Luxe" id="logo" />
+    <h1>Bienvenidos a Goyery Luxe</h1>
+  </header>
 
-    <section id="inicio">
-        <h2>Nuestra Historia</h2>
-        <p>La esmeralda y el oro son parte de nuestra tradición. Goyery Luxe convierte minerales preciosos en joyas únicas y personalizadas.</p>
-        <img src=esmeralda.jpg" alt="Esmeralda">
-        <img src=oro.jpg" alt="Oro">
-    </section>
+  <section id="inicio">
+    <h2>Nuestra Historia</h2>
+    <p>
+      La esmeralda y el oro son parte de nuestra tradición. Goyery Luxe convierte minerales preciosos en joyas únicas y personalizadas.
+    </p>
+    <img src="inicio-esmeralda.jpg" alt="Esmeralda" />
+    <img src="inicio-oro.jpg" alt="Oro" />
+  </section>
 
-    <section id="nosotros">
-       <h2>Nosotros</h2>
-  <p>En Goyery Luxe fabricamos joyas a tu gusto. Si estás interesado en una joya personalizada, escríbenos por 
-    <a href="https://wa.me/573155588648" target="_blank">WhatsApp</a> o en 
-    <a href="https://www.instagram.com/goyeryluxe" target="_blank">Instagram @goyeryluxe</a>.
-  </p>
+  <section id="nosotros">
+    <h2>Nosotros</h2>
+    <p>
+      En Goyery Luxe fabricamos joyas a tu gusto. Si estás interesado en una joya personalizada, escríbenos por
+      <a href="https://wa.me/573155588648" target="_blank">WhatsApp</a>
+      o por
+      <a href="https://www.instagram.com/goyeryluxe" target="_blank">Instagram @goyeryluxe</a>.
+    </p>
+    <div class="videos">
+      <video src="video1.MP4" controls width="300"></video>
+      <video src="video2.MP4" controls width="300"></video>
+      <video src="video3.MP4" controls width="300"></video>
+    </div>
+  </section>
 
-  <div class="videos">
-    <video src="video/video1.MP4" controls width="300"></video>
-    <video src="video/video2.MP4" controls width="300"></video>
-    <video src="video/video3.MP4" controls width="300"></video>
+  <section id="productos">
+    <h2>Productos</h2>
+    <div class="galeria">
+     <img src="producto1.jpg" alt="Producto" />
+    <img src="producto2.jpg" alt="Producto" />
+    <img src="producto3.jpg" alt="Producto" />
+    <img src="producto4.jpg" alt="Producto" />
+    <img src="producto5.jpg" alt="Producto" />
+    <img src="producto6.jpg" alt="Producto" />
+    <img src="producto7.jpg" alt="Producto" />
+    <img src="producto8.jpg" alt="Producto" />
+    <img src="producto9.jpg" alt="Producto" />
+    <img src="producto10.jpg" alt="Producto" />
+    <img src="producto11.jpg" alt="Producto" />
+    <img src="producto12.jpg" alt="Producto" />
+    <img src="producto13.jpg" alt="Producto" />
+    <img src="producto14.jpg" alt="Producto" />
+    <img src="producto15.jpg" alt="Producto" />
   </div>
+    </div>
+  </section>
 
-    </section>
+  <footer>
+    <a href="https://wa.me/573155588648" target="_blank">
+      <img src="whatsapp-dorado.png" alt="WhatsApp" style="width:50px;" />
+    </a>
+    <a href="https://www.instagram.com/goyeryluxe" target="_blank">
+      <img src="Instagram.PNG" alt="Instagram" style="width:50px;" />
+    </a>
+  </footer>
 
-    <section id="productos1">
-        <h2>Productos</h2>
-        <div class="producto2">
-            <img src=producto3.jpg" alt="Producto 1">
-        </div>
-        <div class="producto4">
-            <img src=producto2.jpg" alt="Producto 2">
-        </div>
-    </section>
-
-    <footer>
-        <a href="https://wa.me/573155588648" target="_blank">
-            <img src=whatsapp.png" alt="WhatsApp" style="width:50px;">
-        </a>
-    </footer>
 </body>
 </html>
+
+   
