--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <img src="logo-negro.png" alt="Logo Goyery Luxe" id="logo" />
+    <img src="logo.png" alt="Logo Goyery Luxe" id="logo" />
     <h1>Bienvenidos a Goyery Luxe</h1>
   </header>
 
