--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <footer>
     <a href="https://wa.me/573155588648" target="_blank">
-      <img src="whatsapp-dorado.png" alt="WhatsApp" style="width:50px;" />
+      <img src="whatsapp.PNG" alt="WhatsApp" style="width:50px;" />
     </a>
     <a href="https://www.instagram.com/goyeryluxe" target="_blank">
       <img src="Instagram.PNG" alt="Instagram" style="width:50px;" />
