--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <img src="whatsapp.PNG" alt="WhatsApp" style="width:50px;" />
     </a>
     <a href="https://www.instagram.com/goyeryluxe" target="_blank">
-      <img src="Instagram.PNG" alt="Instagram" style="width:50px;" />
+      <img src="instagram.PNG" alt="Instagram" style="width:50px;" />
     </a>
   </footer>
 
