--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
   </header>
 
   <section id="inicio">
-    <h2>Nuestra Historia</h2>
-    <p>
-      La esmeralda y el oro son parte de nuestra tradición. Goyery Luxe convierte minerales preciosos en joyas únicas y personalizadas.
-    </p>
+  <h2>Nuestra Historia</h2>
+  <p>
+    La esmeralda y el oro son parte de nuestra tradición. Goyery Luxe convierte minerales preciosos en joyas únicas y personalizadas.
+  </p>
+  <div class="imagenes-inicio">
     <img src="inicio-esmeralda.jpg" alt="Esmeralda" />
     <img src="inicio-oro.jpg" alt="Oro" />
-  </section>
+  </div>
+</section>
 
   <section id="nosotros">
     <h2>Nosotros</h2>
