--- a/index.html
+++ b/index.html
@@ -42,22 +42,51 @@
     <h2>Productos</h2>
     <div class="galeria">
      <img src="producto1.jpg" alt="Producto" />
+      <p class="nombre-producto">Anillo Esmeralda</p>
+</div>
     <img src="producto2.jpg" alt="Producto" />
+    <p class="nombre-producto">Anillo Esmeralda</p>
+</div>
     <img src="producto3.jpg" alt="Producto" />
+    <p class="nombre-producto">Anillo Esmeralda</p>
+</div>
     <img src="producto4.jpg" alt="Producto" />
+    <p class="nombre-producto">Anillo Esmeralda</p>
+</div>
     <img src="producto5.jpg" alt="Producto" />
+    <p class="nombre-producto">Anillo Esmeralda</p>
+</div>
     <img src="producto6.jpg" alt="Producto" />
+    <p class="nombre-producto">Anillo Esmeralda</p>
+</div>
     <img src="producto7.jpg" alt="Producto" />
+    <p class="nombre-producto">Anillo Esmeralda</p>
+</div>
     <img src="producto8.jpg" alt="Producto" />
+    <p class="nombre-producto">Anillo Esmeralda</p>
+</div>
     <img src="producto9.jpg" alt="Producto" />
+    <p class="nombre-producto">Anillo Esmeralda</p>
+</div>
     <img src="producto10.jpg" alt="Producto" />
+    <p class="nombre-producto">Anillo Esmeralda</p>
+</div>
     <img src="producto11.jpg" alt="Producto" />
+    <p class="nombre-producto">Anillo Esmeralda</p>
+</div>
     <img src="producto12.jpg" alt="Producto" />
+    <p class="nombre-producto">Anillo Esmeralda</p>
+</div>      
     <img src="producto13.jpg" alt="Producto" />
+    <p class="nombre-producto">Anillo Esmeralda</p>
+</div>
     <img src="producto14.jpg" alt="Producto" />
+    <p class="nombre-producto">Anillo Esmeralda</p>
+</div>
     <img src="producto15.jpg" alt="Producto" />
-  </div>
-    </div>
+    <p class="nombre-producto">Anillo Esmeralda</p>
+</div>
+  
   </section>
 
   <footer>
