--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
     <img src="producto15.jpg" alt="Producto" />
     <p class="nombre-producto">Anillo Esmeralda</p>
 </div>
+    </div>
+  </div>
   
   </section>
 
