--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
   <section id="productos">
     <h2>Productos</h2>
     <div class="galeria">
-     <img src="producto1.jpg" alt="Producto" />
-      <img src="producto3.jpg" alt="Producto" />
-   <img src="producto4.jpg" alt="Producto" />
-    <img src="producto5.jpg" alt="Producto" />
- <img src="producto6.jpg" alt="Producto" />
-    <img src="producto7.jpg" alt="Producto" />
-     <img src="producto8.jpg" alt="Producto" />
-    <img src="producto9.jpg" alt="Producto" />
-  <img src="producto10.jpg" alt="Producto" />
-     <img src="producto11.jpg" alt="Producto" />
-     <img src="producto12.jpg" alt="Producto" />
-     <img src="producto13.jpg" alt="Producto" />
-     <img src="producto14.jpg" alt="Producto" />
-      <img src="producto15.jpg" alt="Producto" />
+     <div src="producto1.jpg" alt="Producto" />
+      <div src="producto3.jpg" alt="Producto" />
+   <div src="producto4.jpg" alt="Producto" />
+    <div src="producto5.jpg" alt="Producto" />
+ <div src="producto6.jpg" alt="Producto" />
+    <div src="producto7.jpg" alt="Producto" />
+     <div src="producto8.jpg" alt="Producto" />
+    <div src="producto9.jpg" alt="Producto" />
+  <div src="producto10.jpg" alt="Producto" />
+     <div src="producto11.jpg" alt="Producto" />
+     <div src="producto12.jpg" alt="Producto" />
+     <div src="producto13.jpg" alt="Producto" />
+     <div src="producto14.jpg" alt="Producto" />
+      <div src="producto15.jpg" alt="Producto" />
      </div>
     
   </section>
