--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       <a href="https://wa.me/573155588648" target="_blank">WhatsApp</a>
       o por
       <a href="https://www.instagram.com/goyeryluxe" target="_blank">Instagram @goyeryluxe</a>.
-    </p>
+    <p>
+      toda la joyeria se entrega con su devido certificado, !si lo requiere¡
+    
     <div class="videos">
       <video src="video1.MP4" controls width="300"></video>
       <video src="video2.MP4" controls width="300"></video>
