--- a/index.html
+++ b/index.html
@@ -41,24 +41,24 @@
   </section>
 
   <section id="productos">
-    <h2>Productos</h2>
-    <img class="galeria">
-     <img src="producto1.jpg" alt="Producto" />
-      <img src="producto3.jpg" alt="Producto" />
-   <img src="producto4.jpg" alt="Producto" />
-    <img src="producto5.jpg" alt="Producto" />
- <img src="producto6.jpg" alt="Producto" />
-    <img src="producto7.jpg" alt="Producto" />
-     <img src="producto8.jpg" alt="Producto" />
-    <img src="producto9.jpg" alt="Producto" />
-  <img src="producto10.jpg" alt="Producto" />
-     <img src="producto11.jpg" alt="Producto" />
-     <img src="producto12.jpg" alt="Producto" />
-     <img src="producto13.jpg" alt="Producto" />
-     <img src="producto14.jpg" alt="Producto" />
-      <img src="producto15.jpg" alt="Producto" />
-     </div>
-    
+  <h2>Productos</h2>
+  <div class="galeria-productos">
+    <div class="producto"><img src="producto1.jpg" alt="Producto 1"></div>
+    <div class="producto"><img src="producto2.jpg" alt="Producto 2"></div>
+    <div class="producto"><img src="producto3.jpg" alt="Producto 3"></div>
+    <div class="producto"><img src="producto4.jpg" alt="Producto 4"></div>
+    <div class="producto"><img src="producto5.jpg" alt="Producto 5"></div>
+    <div class="producto"><img src="producto6.jpg" alt="Producto 6"></div>
+    <div class="producto"><img src="producto7.jpg" alt="Producto 7"></div>
+    <div class="producto"><img src="producto8.jpg" alt="Producto  8"></div>
+    <div class="producto"><img src="producto9.jpg" alt="Producto 9"></div>
+    <div class="producto"><img src="producto10.jpg" alt="Producto 10"></div>
+    <div class="producto"><img src="producto11.jpg" alt="Producto 11"></div>
+    <div class="producto"><img src="producto12.jpg" alt="Producto12"></div>
+    <div class="producto"><img src="producto13.jpg" alt="Producto13"></div>
+    <div class="producto"><img  src="producto14.jpg" alt="Producto14"></div>
+    <div class="producto"><img src="producto15.jpg" alt="Producto15"></div>
+                            
   </section>
 
   <footer>
