--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       o por
       <a href="https://www.instagram.com/goyeryluxe" target="_blank">Instagram @goyeryluxe</a>.
     <p>
-      toda la joyeria se entrega con su devido certificado, !si lo requiere¡
+      toda la joyeria se entrega con su respectivo certificado, !si lo requiere¡
     
     <div class="videos">
       <video src="video1.MP4" controls width="300"></video>
