--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
 
   <section id="inicio">
-  <h2>Nuestra Historia</h2>
+  <h2>inicio</h2>
   <p>
     La esmeralda y el oro son parte de nuestra tradición. Goyery Luxe convierte minerales preciosos en joyas únicas y personalizadas.
   </p>
