--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       <video src="video1.MP4" controls width="300"></video>
       <video src="video2.MP4" controls width="300"></video>
       <video src="video3.MP4" controls width="300"></video>
+      <video src="video4.MP4" controls width="300"></video>
+       <video src="video5.MP4" controls width="300"></video>
     </div>
   </section>
 
