--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
       <video src="video3.MP4" controls width="300"></video>
       <video src="video4.MP4" controls width="300"></video>
        <video src="video5.MP4" controls width="300"></video>
+      <div class="mensaje-emprendedores">
+  <h2>Oportunidades para emprendedores</h2>
+  <p>
+    En <strong>Goyery Luxe</strong> les ofrecemos <strong>lotes de anillos en oro y plata</strong> para emprendedores que quieran avanzar en nuestro mercado.<br>
+    También les ofrecemos <strong>lotes de esmeralda</strong> para trabajar con oro y plata.
+  </p>
+</div>
     </div>
   </section>
 
