--- a/index.html
+++ b/index.html
@@ -12,27 +12,24 @@
     <h1>Bienvenidos a Goyery Luxe</h1>
   </header>
 
-  <section id="inicio">
-  <h2>inicio</h2>
+<section id="inicio" class="seccion-info">
+  <h2>Inicio</h2>
   <p>
-    La esmeralda y el oro son parte de nuestra tradición. Goyery Luxe convierte minerales preciosos en joyas únicas y personalizadas.
+    La esmeralda y el oro son parte de nuestra tradición.<br>
+    Goyery Luxe convierte minerales preciosos en joyas únicas y personalizadas.
   </p>
-  <div class="imagenes-inicio">
-    <img src="inicio-esmeralda.jpg" alt="Esmeralda" />
-    <img src="inicio-oro.jpg" alt="Oro" />
-  </div>
 </section>
 
-  <section id="nosotros">
-    <h2>Nosotros</h2>
-    <p>
-      En Goyery Luxe fabricamos joyas a tu gusto. Si estás interesado en una joya personalizada, escríbenos por
-      <a href="https://wa.me/573155588648" target="_blank">WhatsApp</a>
-      o por
-      <a href="https://www.instagram.com/goyeryluxe" target="_blank">Instagram @goyeryluxe</a>.
-    <p>
-      toda la joyeria se entrega con su respectivo certificado, !si lo requiere¡
-    
+<section id="nosotros" class="seccion-info">
+  <h2>Nosotros</h2>
+  <p>
+    En Goyery Luxe fabricamos joyas a tu gusto.<br>
+    Si estás interesado en una joya personalizada, escríbenos por 
+    <a href="https://wa.me/573167018496" style="color:gold; text-decoration: underline;">WhatsApp</a> o por 
+    <a href="https://instagram.com/goyeryluxe" style="color:gold; text-decoration: underline;">Instagram @goyeryluxe</a>.<br>
+    Toda la joyería se entrega con su respectivo certificado, ¡si lo requieres!
+  </p>
+</section>    
     <div class="videos">
       <video src="video1.MP4" controls width="300"></video>
       <video src="video2.MP4" controls width="300"></video>
