--- a/index.html
+++ b/index.html
@@ -18,18 +18,22 @@
     La esmeralda y el oro son parte de nuestra tradición.<br>
     Goyery Luxe convierte minerales preciosos en joyas únicas y personalizadas.
   </p>
+  <div class="imagenes-inicio">
+    <img src="img/inicio-esmeralda.jpg" alt="esmeralda" />
+    <img src="img/inicio-oro.jpg" alt="oro" />
+  </div>
 </section>
 
 <section id="nosotros" class="seccion-info">
   <h2>Nosotros</h2>
   <p>
     En Goyery Luxe fabricamos joyas a tu gusto.<br>
-    Si estás interesado en una joya personalizada, escríbenos por 
-    <a href="https://wa.me/573167018496" style="color:gold; text-decoration: underline;">WhatsApp</a> o por 
+    Si estás interesado en una joya personalizada, escríbenos por
+    <a href="https://wa.me/573167018496" style="color:gold; text-decoration: underline;">WhatsApp</a> o por
     <a href="https://instagram.com/goyeryluxe" style="color:gold; text-decoration: underline;">Instagram @goyeryluxe</a>.<br>
     Toda la joyería se entrega con su respectivo certificado, ¡si lo requieres!
   </p>
-</section>    
+</section>
     <div class="videos">
       <video src="video1.MP4" controls width="300"></video>
       <video src="video2.MP4" controls width="300"></video>
