--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     Goyery Luxe convierte minerales preciosos en joyas únicas y personalizadas.
   </p>
   <div class="imagenes-inicio">
-    <img src=inicio-esmeralda.jpg" alt="esmeralda" />
-    <img src=inicio-oro.jpg" alt="oro" />
+    <img src="inicio-esmeralda.jpg" alt="esmeralda" />
+    <img src="inicio-oro.jpg" alt="oro" />
   </div>
 </section>
 
