--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     Toda la joyería se entrega con su respectivo certificado, ¡si lo requieres!
   </p>
 </section>
-    <div class="videos">
-      <video src="video1.MP4" controls width="300"></video>
-      <video src="video2.MP4" controls width="300"></video>
-      <video src="video3.MP4" controls width="300"></video>
-      <video src="video4.MP4" controls width="300"></video>
-       <video src="video5.MP4" controls width="300"></video>
-      <div class="mensaje-emprendedores">
+   <div class="galeria-videos">
+  <video src="video1.MP4" controls></video>
+  <video src="video2.MP4" controls></video>
+  <video src="video3.MP4" controls></video>
+  <video src="video4.MP4" controls></video>
+  <video src="video5.MP4" controls></video>
+   <div class="mensaje-emprendedores">
   <h2>Oportunidades para emprendedores</h2>
   <p>
     En <strong>Goyery Luxe</strong> les ofrecemos <strong>lotes de anillos en oro y plata</strong> para emprendedores que quieran avanzar en nuestro mercado.<br>
