--- a/index.html
+++ b/index.html
@@ -50,26 +50,71 @@
     </div>
   </section>
 
-  <section id="productos">
+<section id="productos">
   <h2>Productos</h2>
   <div class="galeria-productos">
-    <div class="producto"><img src="producto1.jpg" alt="Producto 1"></div>
-    <div class="producto"><img src="producto2.jpg" alt="Producto 2"></div>
-    <div class="producto"><img src="producto3.jpg" alt="Producto 3"></div>
-    <div class="producto"><img src="producto4.jpg" alt="Producto 4"></div>
-    <div class="producto"><img src="producto5.jpg" alt="Producto 5"></div>
-    <div class="producto"><img src="producto6.jpg" alt="Producto 6"></div>
-    <div class="producto"><img src="producto7.jpg" alt="Producto 7"></div>
-    <div class="producto"><img src="producto8.jpg" alt="Producto  8"></div>
-    <div class="producto"><img src="producto9.jpg" alt="Producto 9"></div>
-    <div class="producto"><img src="producto10.jpg" alt="Producto 10"></div>
-    <div class="producto"><img src="producto11.jpg" alt="Producto 11"></div>
-    <div class="producto"><img src="producto12.jpg" alt="Producto12"></div>
-    <div class="producto"><img src="producto13.jpg" alt="Producto13"></div>
-    <div class="producto"><img  src="producto14.jpg" alt="Producto14"></div>
-    <div class="producto"><img src="producto15.jpg" alt="Producto15"></div>
-                            
-  </section>
+    <div class="producto">
+      <img src="producto1.jpg" alt="Producto 1" />
+      <p class="nombre-producto">Cadena dorada</p>
+    </div>
+    <div class="producto">
+      <img src="producto2.jpg" alt="Producto 2" />
+      <p class="nombre-producto">Collar con esmeralda</p>
+    </div>
+    <div class="producto">
+      <img src="producto3.jpg" alt="Producto 3" />
+      <p class="nombre-producto">Pulsera de eslabones</p>
+    </div>
+    <div class="producto">
+      <img src="producto4.jpg" alt="Producto 4" />
+      <p class="nombre-producto">Cadena con dije</p>
+    </div>
+    <div class="producto">
+      <img src="producto5.jpg" alt="Producto 5" />
+      <p class="nombre-producto">Collar brillante</p>
+    </div>
+    <div class="producto">
+      <img src="producto6.jpg" alt="Producto 6" />
+      <p class="nombre-producto">Set de joyas verde</p>
+    </div>
+    <div class="producto">
+      <img src="producto7.jpg" alt="Producto 7" />
+      <p class="nombre-producto">Anillo tallado</p>
+    </div>
+    <div class="producto">
+      <img src="producto8.jpg" alt="Producto 8" />
+      <p class="nombre-producto">Aretes delicados</p>
+    </div>
+    <div class="producto">
+      <img src="producto9.jpg" alt="Producto 9" />
+      <p class="nombre-producto">Anillo rectangular</p>
+    </div>
+    <div class="producto">
+      <img src="producto10.jpg" alt="Producto 10" />
+      <p class="nombre-producto">Anillo esmeralda central</p>
+    </div>
+    <div class="producto">
+      <img src="producto11.jpg" alt="Producto 11" />
+      <p class="nombre-producto">Argolla dorada</p>
+    </div>
+    <div class="producto">
+      <img src="producto12.jpg" alt="Producto 12" />
+      <p class="nombre-producto">Sortija plateada</p>
+    </div>
+    <div class="producto">
+      <img src="producto13.jpg" alt="Producto 13" />
+      <p class="nombre-producto">Anillo doble</p>
+    </div>
+    <div class="producto">
+      <img src="producto14.jpg" alt="Producto 14" />
+      <p class="nombre-producto">Anillo trenzado</p>
+    </div>
+    <div class="producto">
+      <img src="producto15.jpg" alt="Producto 15" />
+      <p class="nombre-producto">Collar azul con verde</p>
+    </div>
+  </div>
+</section>
 
   <footer>
     <a href="https://wa.me/573155588648" target="_blank">
