--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
     </div>
     <div class="producto">
       <img src="producto8.jpg" alt="Producto 8" />
-      <p class="nombre-producto">Aretes delicados</p>
+      <p class="nombre-producto">anillo de oro y esmeralda </p>
     </div>
     <div class="producto">
       <img src="producto9.jpg" alt="Producto 9" />
-      <p class="nombre-producto">Anillo rectangular</p>
+      <p class="nombre-producto">Anillo plata y esmeralda</p>
     </div>
     <div class="producto">
       <img src="producto10.jpg" alt="Producto 10" />
