--- a/index.html
+++ b/index.html
@@ -55,91 +55,91 @@
   <div class="galeria-productos">
 
   <div class="producto">
-    <a href="https://wa.me/573167018496?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Cadena%20dorada" target="_blank">
+    <a href="https://wa.me/573155588648?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Cadena%20dorada" target="_blank">
       <img src="producto1.jpg" alt="Cadena dorada" />
     </a>
     <p class="nombre-producto">Cadena dorada</p>
   </div>
   <div class="producto">
-    <a href="https://wa.me/573167018496?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Collar%20con%20esmeralda" target="_blank">
+    <a href="https://wa.me/573155588648?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Collar%20con%20esmeralda" target="_blank">
       <img src="producto2.jpg" alt="Collar con esmeralda" />
     </a>
     <p class="nombre-producto">Collar con esmeralda</p>
   </div>
   <div class="producto">
-    <a href="https://wa.me/573167018496?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Pulsera%20de%20eslabones" target="_blank">
+    <a href="https://wa.me/573155588648?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Pulsera%20de%20eslabones" target="_blank">
       <img src="producto3.jpg" alt="Pulsera de eslabones" />
     </a>
     <p class="nombre-producto">Pulsera de eslabones</p>
   </div>
   <div class="producto">
-    <a href="https://wa.me/573167018496?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Cadena%20con%20dije" target="_blank">
+    <a href="https://wa.me/5573155588648?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Cadena%20con%20dije" target="_blank">
       <img src="producto4.jpg" alt="Cadena con dije" />
     </a>
     <p class="nombre-producto">Cadena con dije</p>
   </div>
   <div class="producto">
-    <a href="https://wa.me/573167018496?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Collar%20brillante" target="_blank">
+    <a href="https://wa.me/573155588648?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Collar%20brillante" target="_blank">
       <img src="producto5.jpg" alt="Collar brillante" />
     </a>
     <p class="nombre-producto">Collar brillante</p>
   </div>
   <div class="producto">
-    <a href="https://wa.me/573167018496?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Set%20de%20joyas%20verde" target="_blank">
+    <a href="https://wa.me/573155588648?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Set%20de%20joyas%20verde" target="_blank">
       <img src="producto6.jpg" alt="Set de joyas verde" />
     </a>
     <p class="nombre-producto">Set de joyas verde</p>
   </div>
   <div class="producto">
-    <a href="https://wa.me/573167018496?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Anillo%20tallado" target="_blank">
+    <a href="https://wa.me/573155588648?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Anillo%20tallado" target="_blank">
       <img src="producto7.jpg" alt="Anillo tallado" />
     </a>
     <p class="nombre-producto">Anillo tallado</p>
   </div>
   <div class="producto">
-    <a href="https://wa.me/573167018496?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Anillo%20de%20oro%20y%20esmeralda" target="_blank">
+    <a href="https://wa.me/55731555886486?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Anillo%20de%20oro%20y%20esmeralda" target="_blank">
       <img src="producto8.jpg" alt="Anillo de oro y esmeralda" />
     </a>
     <p class="nombre-producto">Anillo de oro y esmeralda</p>
   </div>
   <div class="producto">
-    <a href="https://wa.me/573167018496?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Anillo%20plata%20y%20esmeralda" target="_blank">
+    <a href="https://wa.me/5731555886486?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Anillo%20plata%20y%20esmeralda" target="_blank">
       <img src="producto9.jpg" alt="Anillo plata y esmeralda" />
     </a>
     <p class="nombre-producto">Anillo plata y esmeralda</p>
   </div>
   <div class="producto">
-    <a href="https://wa.me/573167018496?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Anillo%20esmeralda%20central" target="_blank">
+    <a href="https://wa.me/5573155588648?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Anillo%20esmeralda%20central" target="_blank">
       <img src="producto10.jpg" alt="Anillo esmeralda central" />
     </a>
     <p class="nombre-producto">Anillo esmeralda central</p>
   </div>
   <div class="producto">
-    <a href="https://wa.me/573167018496?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Argolla%20dorada" target="_blank">
+    <a href="https://wa.me/5573155588648?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Argolla%20dorada" target="_blank">
       <img src="producto11.jpg" alt="Argolla dorada" />
     </a>
     <p class="nombre-producto">Argolla dorada</p>
   </div>
   <div class="producto">
-    <a href="https://wa.me/573167018496?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Sortija%20plateada" target="_blank">
+    <a href="https://wa.me/573155588648?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Sortija%20plateada" target="_blank">
       <img src="producto12.jpg" alt="Sortija plateada" />
     </a>
     <p class="nombre-producto">Sortija plateada</p>
   </div>
   <div class="producto">
-    <a href="https://wa.me/573167018496?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Anillo%20doble" target="_blank">
+    <a href="https://wa.me/573155588648?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Anillo%20doble" target="_blank">
       <img src="producto13.jpg" alt="Anillo doble" />
     </a>
     <p class="nombre-producto">Anillo doble</p>
   </div>
   <div class="producto">
-    <a href="https://wa.me/573167018496?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Anillo%20trenzado" target="_blank">
+    <a href="https://wa.me573155588648?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Anillo%20trenzado" target="_blank">
       <img src="producto14.jpg" alt="Anillo trenzado" />
     </a>
     <p class="nombre-producto">Anillo trenzado</p>
   </div>
   <div class="producto">
-    <a href="https://wa.me/573167018496?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Collar%20azul%20con%20verde" target="_blank">
+    <a href="https://wa.me/573155588648?text=Hola%20estoy%20interesado%20en%20el%20producto:%20Collar%20azul%20con%20verde" target="_blank">
       <img src="producto15.jpg" alt="Collar azul con verde" />
     </a>
     <p class="nombre-producto">Collar azul con verde</p>
