--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
     <a href="https://wa.me/573155588648?text=Hola%2C%20estoy%20interesado%20en%20este%20producto:%20Collar%20brillante%0Ahttps://goyeryluxe.com/producto5.jpg" target="_blank">
       <img src="producto5.jpg" alt="Collar brillante" />
     </a>
-    <p class="nombre-producto">Collar brillante</p>
+    <p class="nombre-producto">Collar plata y esmeralda</p>
   </div>
   <div class="producto">
     <a href="https://wa.me/573155588648?text=Hola%2C%20estoy%20interesado%20en%20este%20producto:%20Set%20de%20joyas%20verde%0Ahttps://goyeryluxe.com/producto6.jpg" target="_blank">
       <img src="producto6.jpg" alt="Set de joyas verde" />
     </a>
-    <p class="nombre-producto">Set de joyas verde</p>
+    <p class="nombre-producto">collar de plata y esmeralda</p>
   </div>
   <div class="producto">
     <a href="https://wa.me/573155588648?text=Hola%2C%20estoy%20interesado%20en%20este%20producto:%20Anillo%20tallado%0Ahttps://goyeryluxe.com/producto7.jpg" target="_blank">
@@ -111,7 +111,7 @@
     <a href="https://wa.me/573155588648?text=Hola%2C%20estoy%20interesado%20en%20este%20producto:%20Anillo%20esmeralda%20central%0Ahttps://goyeryluxe.com/producto10.jpg" target="_blank">
       <img src="producto10.jpg" alt="Anillo esmeralda central" />
     </a>
-    <p class="nombre-producto">Anillo esmeralda central</p>
+    <p class="nombre-producto">collar en oro y esmeralda</p>
   </div>
   <div class="producto">
     <a href="https://wa.me/573155588648?text=Hola%2C%20estoy%20interesado%20en%20este%20producto:%20Argolla%20dorada%0Ahttps://goyeryluxe.com/producto11.jpg" target="_blank">
@@ -123,13 +123,13 @@
     <a href="https://wa.me/573155588648?text=Hola%2C%20estoy%20interesado%20en%20este%20producto:%20Sortija%20plateada%0Ahttps://goyeryluxe.com/producto12.jpg" target="_blank">
       <img src="producto12.jpg" alt="Sortija plateada" />
     </a>
-    <p class="nombre-producto">Sortija plateada</p>
+    <p class="nombre-producto">anillo en plata y esmeralda</p>
   </div>
   <div class="producto">
     <a href="https://wa.me/573155588648?text=Hola%2C%20estoy%20interesado%20en%20este%20producto:%20Anillo%20doble%0Ahttps://goyeryluxe.com/producto13.jpg" target="_blank">
       <img src="producto13.jpg" alt="Anillo doble" />
     </a>
-    <p class="nombre-producto">Anillo doble</p>
+    <p class="nombre-producto">Anillo plata y esmeralda</p>
   </div>
   <div class="producto">
     <a href="https://wa.me/573155588648?text=Hola%2C%20estoy%20interesado%20en%20este%20producto:%20Anillo%20trenzado%0Ahttps://goyeryluxe.com/producto14.jpg" target="_blank">
@@ -141,7 +141,7 @@
     <a href="https://wa.me/573155588648?text=Hola%2C%20estoy%20interesado%20en%20este%20producto:%20Collar%20azul%20con%20verde%0Ahttps://goyeryluxe.com/producto15.jpg" target="_blank">
       <img src="producto15.jpg" alt="Collar azul con verde" />
     </a>
-    <p class="nombre-producto">Collar azul con verde</p>
+    <p class="nombre-producto">Collar de plata y esmeralda</p>
   </div>
 
   </div>
