--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
   <video src="video5.MP4" controls></video>
    <div class="mensaje-emprendedores">
   <h2>Oportunidades para emprendedores</h2>
-  <a href="#cuentas" class="boton-dorado">aca puedes ver nuestra seccion de lotes</a>
+  <a href="#cuentas" class="boton-dorado">dale clic aca para ver la seccion de lotes</a>
   <p>
+   
     En <strong>Goyery Luxe</strong> les ofrecemos <strong>lotes de anillos en oro y plata</strong> para emprendedores que quieran avanzar en nuestro mercado.<br>
     También les ofrecemos <strong>lotes de esmeralda</strong> para trabajar con oro y plata.
   </p>
