--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
   <video src="video5.MP4" controls></video>
    <div class="mensaje-emprendedores">
   <h2>Oportunidades para emprendedores</h2>
-  <a href="#cuentas" class="boton-dorado">dale clic aca para ver la seccion de lotes</a>
   <p>
    
     En <strong>Goyery Luxe</strong> les ofrecemos <strong>lotes de anillos en oro y plata</strong> para emprendedores que quieran avanzar en nuestro mercado.<br>
@@ -148,7 +147,7 @@
 
   </div>
 </section>
-
+<a href="#cuentas" class="boton-dorado">Ver cuentas disponibles</a>
   <footer>
     <a href="https://wa.me/573155588648" target="_blank">
       <img src="whatsapp.PNG" alt="WhatsApp" style="width:50px;" />
@@ -158,6 +157,13 @@
     </a>
   </footer>
 
+  <section id="cuentas">
+  <h2>Cuentas disponibles</h2>
+  <div class="galeria-cuentas">
+    <!-- Aquí puedes agregar imágenes más adelante -->
+    <p style="color: white;">Muy pronto verás nuestras cuentas disponibles aquí.</p>
+  </div>
+</section>
 </body>
 </html>
 
