--- a/lotes.html
+++ b/lotes.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Cuentas Disponibles - Goyery Luxe</title>
+  <title>lotes a tu gusto - Goyery Luxe</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Cuentas disponibles</h1>
+    <h1>exelentes lotes</h1>
   </header>
 
   <main>
