--- a/lotes.html
+++ b/lotes.html
@@ -12,9 +12,33 @@
 
   <main>
     <p style="color: white; text-align: center;">
-      Muy pronto verás aquí los lotes de esmeralda y oro para emprendedores.
+      lotes de muy buena calidad
     </p>
-    <!-- Aquí puedes añadir imágenes más adelante -->
+     <img src="lote1.jpg" alt="Lote 1" />
+      <img src="lote1.jpg" alt="Lote 2" />
+      <img src="lote1.jpg" alt="Lote 3" />
+      <img src="lote1.jpg" alt="Lote 4" />
+      <img src="lote1.jpg" alt="Lote 5" />
+      <img src="lote1.jpg" alt="Lote 6" />
+      <img src="lote1.jpg" alt="Lote 7" />
+      <img src="lote1.jpg" alt="Lote 8" />
+      <img src="lote1.jpg" alt="Lote 9" />
+      <img src="lote1.jpg" alt="Lote 10" />
+      <img src="lote1.jpg" alt="Lote 12" />
+      <img src="lote1.jpg" alt="Lote 13" />
+      <img src="lote1.jpg" alt="Lote 14" />
+      <img src="lote1.jpg" alt="Lote 15" />
+      <img src="lote1.jpg" alt="Lote 16" />
+      <img src="lote1.jpg" alt="Lote 17" />
+      <img src="lote1.jpg" alt="Lote 18" />
+      <img src="lote1.jpg" alt="Lote 19" />
+      <img src="lote1.jpg" alt="Lote 20" />
+      <img src="lote1.jpg" alt="Lote 21" />
+      <img src="lote1.jpg" alt="Lote 22" />
+      <img src="lote1.jpg" alt="Lote 23" />
+      <img src="lote1.jpg" alt="Lote 24" />
+      <img src="lote1.jpg" alt="Lote 25" />
+      
   </main>
 </body>
 </html>
