--- a/lotes.html
+++ b/lotes.html
@@ -14,30 +14,30 @@
     <p style="color: white; text-align: center;">
       lotes de muy buena calidad
     </p>
-     <img src="lote1.jpg" alt="lote 1" />
-      <img src="lote2.jpg" alt="lote 2" />
-      <img src="lote3.jpg" alt="lote 3" />
-      <img src="lote4.jpg" alt="lote 4" />
-      <img src="lote5.jpg" alt="lote 5" />
-      <img src="lote6.jpg" alt="lote 6" />
-      <img src="lote7.jpg" alt="lote 7" />
-      <img src="lote8.jpg" alt="lote 8" />
-      <img src="lote9.jpg" alt="lote 9" />
-      <img src="lote11.jpg" alt="lote 11" />
-      <img src="lote12.jpg" alt="lote 12" />
-      <img src="lote13.jpg" alt="lote 13" />
-      <img src="lote14.jpg" alt="lote 14" />
-      <img src="lote15.jpg" alt="lote 15" />
-      <img src="lote16.jpg" alt="lote 16" />
-      <img src="lote17.jpg" alt="lote 17" />
-      <img src="lote18.jpg" alt="lote 18" />
-      <img src="lote19.jpg" alt="lote 19" />
-      <img src="lote20.jpg" alt="lote 20" />
-      <img src="lote21.jpg" alt="lote 21" />
-      <img src="lote22.jpg" alt="lote 22" />
-      <img src="lote23.jpg" alt="lote 23" />
-      <img src="lote24.jpg" alt="lote 24" />
-     <img src="lote25.jpg" alt="lote 25" />
+      <img src="lote1.jpg" alt="Lote 1" />
+      <img src="lote2.jpg" alt="Lote 2" />
+      <img src="lote3.jpg" alt="Lote 3" />
+      <img src="lote4.jpg" alt="Lote 4" />
+      <img src="lote5.jpg" alt="Lote 5" />
+      <img src="lote6.jpg" alt="Lote 6" />
+      <img src="lote7.jpg" alt="Lote 7" />
+      <img src="lote8.jpg" alt="Lote 8" />
+      <img src="lote9.jpg" alt="Lote 9" />
+      <img src="lote11.jpg" alt="Lote 11" />
+      <img src="lote12.jpg" alt="Lote 12" />
+      <img src="lote13.jpg" alt="Lote 13" />
+      <img src="lote14.jpg" alt="Lote 14" />
+      <img src="lote15.jpg" alt="Lote 15" />
+      <img src="lote16.jpg" alt="Lote 16" />
+      <img src="lote17.jpg" alt="Lote 17" />
+      <img src="lote18.jpg" alt="Lote 18" />
+      <img src="lote19.jpg" alt="Lote 19" />
+      <img src="lote20.jpg" alt="Lote 20" />
+      <img src="lote21.jpg" alt="Lote 21" />
+      <img src="lote22.jpg" alt="Lote 22" />
+      <img src="lote23.jpg" alt="Lote 23" />
+      <img src="lote24.jpg" alt="Lote 24" />
+     <img src="lote25.jpg" alt="Lote 25" />
       
   </main>
 </body>
