--- a/lotes.html
+++ b/lotes.html
@@ -41,6 +41,14 @@
     <img src="lote24.jpg" alt="Lote 24" />
     <img src="lote25.jpg" alt="Lote 25" />
   </div>
+  <div style="text-align: center; margin-top: 30px;">
+  <a href="https://wa.me/573155588648" target="_blank" style="margin-right: 15px;">
+    <img src="img/whatsapp-dorado.png" alt="WhatsApp" style="width: 60px;">
+  </a>
+  <a href="https://www.instagram.com/goyeryluxe" target="_blank">
+    <img src="img/instagram.PNG" alt="Instagram" style="width: 60px;">
+  </a>
+</div>
 </main>
 </body>
 </html>
