--- a/lotes.html
+++ b/lotes.html
@@ -43,10 +43,10 @@
   </div>
   <div style="text-align: center; margin-top: 30px;">
   <a href="https://wa.me/573155588648" target="_blank" style="margin-right: 15px;">
-    <img src="img/whatsapp-dorado.png" alt="WhatsApp" style="width: 60px;">
+    <img src="whatsapp-dorado.png" alt="WhatsApp" style="width: 60px;">
   </a>
   <a href="https://www.instagram.com/goyeryluxe" target="_blank">
-    <img src="img/instagram.PNG" alt="Instagram" style="width: 60px;">
+    <img src="instagram.PNG" alt="Instagram" style="width: 60px;">
   </a>
 </div>
 </main>
