--- a/lotes.html
+++ b/lotes.html
@@ -43,7 +43,7 @@
   </div>
   <div style="text-align: center; margin-top: 30px;">
   <a href="https://wa.me/573155588648" target="_blank" style="margin-right: 15px;">
-    <img src="whatsapp-dorado.png" alt="WhatsApp" style="width: 60px;">
+    <img src="whatsapp.PNG" alt="WhatsApp" style="width: 60px;">
   </a>
   <a href="https://www.instagram.com/goyeryluxe" target="_blank">
     <img src="instagram.PNG" alt="Instagram" style="width: 60px;">
