--- a/lotes.html
+++ b/lotes.html
@@ -8,6 +8,7 @@
 <body>
   <header>
     <h1>exelentes lotes</h1>
+    <img src="logo.png" alt="Logo Goyery Luxe" style="width: 100px; margin-top: 10px;">
   </header>
 
 <main>
