--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png.PNG" alt="Logo Goyery Luxe" id="logo" />
+    <img src="logo.png.PNG" alt="Logo Goyery Luxe" class="logo-animado" />
     <h1>Bienvenidos a Goyery Luxe</h1>
   </header>
 
