--- a/lotes.html
+++ b/lotes.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png.PNG" alt="Logo Goyery Luxe" style="width: 100px; margin-top: 10px;">
+   <img src="logo.png.PNG" alt="Logo Goyery Luxe" class="logo-animado" />
     <h1>exelentes lotes</h1>
 
  </header>
