--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
     <a href="https://wa.me/573155588648?text=Hola%2C%20estoy%20interesado%20en%20este%20producto:%20Pulsera%20de%20eslabones%0Ahttps://goyeryluxe.com/producto3.jpg" target="_blank">
       <img src="producto3.jpg" alt="Pulsera de eslabones" />
     </a>
-    <p class="nombre-producto">Pulsera de eslabones</p>
+    <p class="nombre-producto">Pulsera de plata</p>
   </div>
   <div class="producto">
     <a href="https://wa.me/573155588648?text=Hola%2C%20estoy%20interesado%20en%20este%20producto:%20Cadena%20con%20dije%0Ahttps://goyeryluxe.com/producto4.jpg" target="_blank">
       <img src="producto4.jpg" alt="Cadena con dije" />
     </a>
-    <p class="nombre-producto">Cadena con dije</p>
+    <p class="nombre-producto">pulsera de oro</p>
   </div>
   <div class="producto">
     <a href="https://wa.me/573155588648?text=Hola%2C%20estoy%20interesado%20en%20este%20producto:%20Collar%20brillante%0Ahttps://goyeryluxe.com/producto5.jpg" target="_blank">
@@ -121,7 +121,7 @@
     <a href="https://wa.me/573155588648?text=Hola%2C%20estoy%20interesado%20en%20este%20producto:%20Argolla%20dorada%0Ahttps://goyeryluxe.com/producto11.jpg" target="_blank">
       <img src="producto11.jpg" alt="Argolla dorada" />
     </a>
-    <p class="nombre-producto">Argolla dorada</p>
+    <p class="nombre-producto">anillo de oro</p>
   </div>
   <div class="producto">
     <a href="https://wa.me/573155588648?text=Hola%2C%20estoy%20interesado%20en%20este%20producto:%20Sortija%20plateada%0Ahttps://goyeryluxe.com/producto12.jpg" target="_blank">
