--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
   <header>
     <img src="logo.png.PNG" alt="Logo Goyery Luxe" class="logo-animado" />
+    <nav>
+  <a href="index.html" class="activo">Inicio</a>
+  <a href="oro.html">Joyería en Oro</a>
+  <a href="plata.html">Joyería en Plata</a>
+  <a href="lotes.html">Lotes</a>
+</nav>
     <h1>Bienvenidos a Goyery Luxe</h1>
   </header>
 
