--- a/lotes.html
+++ b/lotes.html
@@ -8,6 +8,9 @@
 <body>
   <header>
    <img src="logo.png.PNG" alt="Logo Goyery Luxe" class="logo-animado" />
+    <nav>
+   <a href="lotes.html">Lotes</a>
+</nav>
     <h1>exelentes lotes</h1>
 
  </header>
