--- a/oro.html
+++ b/oro.html
@@ -9,7 +9,10 @@
   <header>
     <img src="img/logo.png" alt="Logo Goyery Luxe" class="logo">
     <nav>
-       <a href="oro.html" class="activo">Joyería en Oro</a>
+         <a href="index.html" class="activo">Inicio</a>
+  <a href="oro.html">Joyería en Oro</a>
+  <a href="plata.html">Joyería en Plata</a>
+  <a href="lotes.html">Lotes</a>
        </nav>
   </header>
 
