--- a/lotes.html
+++ b/lotes.html
@@ -9,7 +9,10 @@
   <header>
    <img src="logo.png.PNG" alt="Logo Goyery Luxe" class="logo-animado" />
     <nav>
-   <a href="lotes.html">Lotes</a>
+   <a href="index.html" class="activo">Inicio</a>
+  <a href="oro.html">Joyería en Oro</a>
+  <a href="plata.html">Joyería en Plata</a>
+  <a href="lotes.html">Lotes</a>
 </nav>
     <h1>exelentes lotes</h1>
 
