--- a/oro.html
+++ b/oro.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <img src="img/logo.png" alt="Logo Goyery Luxe" class="logo">
+    <img src="img/logo.png.PNG" alt="Logo Goyery Luxe" class="logo">
     <nav>
          <a href="index.html" class="activo">Inicio</a>
   <a href="oro.html">Joyería en Oro</a>
