--- a/oro.html
+++ b/oro.html
@@ -24,7 +24,7 @@
   </main>
 
   <a href="https://wa.me/573155588648" class="whatsapp-boton" target="_blank">
-    <img src="img/whatsapp.png" alt="WhatsApp">
+    <img src="img/whatsapp.PNG" alt="WhatsApp">
   </a>
 </body>
 </html>
