--- a/plata.html
+++ b/plata.html
@@ -22,9 +22,14 @@
       <!-- Aquí irán las imágenes de productos de plata -->
     </div>
   </main>
-
-  <a href="https://wa.me/573155588648" class="whatsapp-boton" target="_blank">
-    <img src="whatsapp.PNG" alt="WhatsApp">
+ <div style="text-align: center; margin-top: 30px;">
+  <a href="https://wa.me/573155588648" target="_blank" style="margin-right: 15px;">
+    <img src="whatsapp.PNG" alt="WhatsApp" style="width: 60px;">
+  </a>
+  <a href="https://www.instagram.com/goyeryluxe" target="_blank">
+    <img src="instagram.PNG" alt="Instagram" style="width: 60px;">
+  </a>
+</div>
   </a>
 </body>
 </html>
