--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a href="index.html" class="activo">Inicio</a>
   <a href="oro.html">Joyería en Oro</a>
   <a href="plata.html">Joyería en Plata</a>
-  <a href="lotes.html">Lotes</a>
+  <a href="lotes.html">Lotes de esmeralda</a>
 </nav>
     <h1>Bienvenidos a Goyery Luxe</h1>
   </header>
