--- a/oro.html
+++ b/oro.html
@@ -12,7 +12,7 @@
          <a href="index.html" class="activo">Inicio</a>
   <a href="oro.html">Joyería en Oro</a>
   <a href="plata.html">Joyería en Plata</a>
-  <a href="lotes.html">Lotes</a>
+  <a href="lotes.html">Lotes de esmeralda</a>
        </nav>
   </header>
 
