--- a/lotes.html
+++ b/lotes.html
@@ -24,30 +24,21 @@
   </p>
 
   <div class="contenedor-lotes">
-    <img src="lote1.jpg" alt="Lote 1" />
-    <img src="lote2.jpg" alt="Lote 2" />
-    <img src="lote3.jpg" alt="Lote 3" />
-    <img src="lote4.jpg" alt="Lote 4" />
-    <img src="lote5.jpg" alt="Lote 5" />
-    <img src="lote6.jpg" alt="Lote 6" />
-    <img src="lote7.jpg" alt="Lote 7" />
-    <img src="lote8.jpg" alt="Lote 8" />
-    <img src="lote9.jpg" alt="Lote 9" />
-    <img src="lote11.jpg" alt="Lote 11" />
-    <img src="lote12.jpg" alt="Lote 12" />
-    <img src="lote13.jpg" alt="Lote 13" />
-    <img src="lote14.jpg" alt="Lote 14" />
-    <img src="lote15.jpg" alt="Lote 15" />
-    <img src="lote16.jpg" alt="Lote 16" />
-    <img src="lote17.jpg" alt="Lote 17" />
-    <img src="lote18.jpg" alt="Lote 18" />
-    <img src="lote19.jpg" alt="Lote 19" />
-    <img src="lote20.jpg" alt="Lote 20" />
-    <img src="lote21.jpg" alt="Lote 21" />
-    <img src="lote22.jpg" alt="Lote 22" />
-    <img src="lote23.jpg" alt="Lote 23" />
-    <img src="lote24.jpg" alt="Lote 24" />
-    <img src="lote25.jpg" alt="Lote 25" />
+    <img src="img/lote1.jpg" alt="Lote 1" />
+    <img src="img/lote2.jpg" alt="Lote 2" />
+    <img src="img/lote3.jpg" alt="Lote 3" />
+    <img src="img/lote4.jpg" alt="Lote 4" />
+    <img src="img/lote5.jpg" alt="Lote 5" />
+    <img src="img/lote6.jpg" alt="Lote 6" />
+    <img src="img/lote7.jpg" alt="Lote 7" />
+    <img src="img/lote8.jpg" alt="Lote 8" />
+    <img src="img/lote9.jpg" alt="Lote 9" />
+    <img src="img/lote11.jpg" alt="Lote 11" />
+    <img src="img/lote12.jpg" alt="Lote 12" />
+    <img src="img/lote13.jpg" alt="Lote 13" />
+    <img src="img/lote14.jpg" alt="Lote 14" />
+    <img src="img/lote15.jpg" alt="Lote 15" />
+   
   </div>
   <div style="text-align: center; margin-top: 30px;">
   <a href="https://wa.me/573155588648" target="_blank" style="margin-right: 15px;">
