--- a/oro.html
+++ b/oro.html
@@ -14,6 +14,12 @@
   <a href="plata.html">Joyería en Plata</a>
   <a href="lotes.html">Lotes de esmeralda</a>
        </nav>
+    <div class="sub-menu">
+  <a href="#anillos">Anillos</a>
+  <a href="#collares">Collares</a>
+  <a href="#aretes">Aretes</a>
+  <a href="#manillas">Manillas</a>
+</div>
   </header>
 
   <main>
@@ -34,3 +40,22 @@
   </a>
 </body>
 </html>
+<section id="anillos">
+  <h2>Anillos</h2>
+  <!-- Aquí van las imágenes de anillos -->
+</section>
+
+<section id="collares">
+  <h2>Collares</h2>
+  <!-- Aquí van las imágenes de collares -->
+</section>
+
+<section id="aretes">
+  <h2>Aretes</h2>
+  <!-- Aquí van las imágenes de aretes -->
+</section>
+
+<section id="manillas">
+  <h2>Manillas</h2>
+  <!-- Aquí van las imágenes de manillas -->
+</section>
