--- a/plata.html
+++ b/plata.html
@@ -34,7 +34,23 @@
 </html>
 <section id="anillos">
   <h2>Anillos</h2>
-  <!-- Aquí van las imágenes de anillos -->
+  <img src="img/anillo de plata1.jpg" alt="anillo de plata1" />
+  <img src="img/anillo de plata2.jpg" alt="anillo de plata 2" />
+  <img src="img/anillo de plata3.jpg" alt="anillo de plata 3" />
+  <img src="img/anillo de plata4.jpg" alt="anillo de plata 4" />
+  <img src="img/anillo de plata5jpg" alt="anillo de plata 5" />
+  <img src="img/anillo de plata6jpg" alt="anillo de plata 6" />
+  <img src="img/anillo de plata7jpg" alt="anillo de plata 7" />
+  <img src="img/anillo de plata8.jpg" alt="anillo de plata 8" />
+  <img src="img/anillo de plata9.jpg" alt="anillo de plata 9" />
+  <img src="img/anillo de plata10.jpg" alt="anillo de plata 10" />
+  <img src="img/anillo de plata11.jpg" alt="anillo de plata 11" />
+  <img src="img/anillo de plata12.jpg" alt="anillo de plata 12" />
+  <img src="img/anillo de plata13.jpg" alt="anillo de plata 13" />
+  <img src="img/anillo de plata14.jpg" alt="anillo de plata 14" />
+  <img src="img/anillo de plata15.jpg" alt="anillo de plata 15" />
+  <img src="img/anillo de plata16.jpg" alt="anillo de plata 16" />
+  <img src="img/anillo de plata17.jpg" alt="anillo de plata 17" />
 </section>
 
 <section id="collares">
