--- a/plata.html
+++ b/plata.html
@@ -38,9 +38,9 @@
   <img src="img/anillo de plata2.jpg" alt="anillo de plata 2" />
   <img src="img/anillo de plata3.jpg" alt="anillo de plata 3" />
   <img src="img/anillo de plata4.jpg" alt="anillo de plata 4" />
-  <img src="img/anillo de plata5jpg" alt="anillo de plata 5" />
-  <img src="img/anillo de plata6jpg" alt="anillo de plata 6" />
-  <img src="img/anillo de plata7jpg" alt="anillo de plata 7" />
+  <img src="img/anillo de plata5.jpg" alt="anillo de plata 5" />
+  <img src="img/anillo de plata6.jpg" alt="anillo de plata 6" />
+  <img src="img/anillo de plata7.jpg" alt="anillo de plata 7" />
   <img src="img/anillo de plata8.jpg" alt="anillo de plata 8" />
   <img src="img/anillo de plata9.jpg" alt="anillo de plata 9" />
   <img src="img/anillo de plata10.jpg" alt="anillo de plata 10" />
