--- a/plata.html
+++ b/plata.html
@@ -51,6 +51,7 @@
   <img src="img/anillo de plata15.jpg" alt="anillo de plata 15" />
   <img src="img/anillo de plata16.jpg" alt="anillo de plata 16" />
   <img src="img/anillo de plata17.jpg" alt="anillo de plata 17" />
+   <img src="img/anillo plata morado.jpg" alt="anillo plata morado" />
 </section>
 
 <section id="collares">
