--- a/plata.html
+++ b/plata.html
@@ -56,7 +56,14 @@
 
 <section id="collares">
   <h2>Collares</h2>
-  <!-- Aquí van las imágenes de collares -->
+  <img src="img/collar plata1.jpg" alt="collar plata 1" />
+  <img src="img/collar plata2.jpg" alt="collar plata 2" />
+  <img src="img/collar plata3.jpg" alt="collar plata 3" />
+  <img src="img/collar plata4.jpg" alt="collar plata 4" />
+  <img src="img/collar plata5.jpg" alt="collar plata 5" />
+  <img src="img/collar plata6.jpg" alt="collar plata 6" />
+  <img src="img/collar plata7.jpg" alt="collar plata 7" />
+  <img src="img/collar plata8.jpg" alt="collar plata 8" />
 </section>
 
 <section id="aretes">
