--- a/oro.html
+++ b/oro.html
@@ -35,12 +35,24 @@
 </html>
 <section id="anillos">
   <h2>Anillos</h2>
-  <!-- Aquí van las imágenes de anillos -->
+  <img src="img/anillo de oro1.jpg" alt="anillo de oro 1" />
+  <img src="img/anillo de oro2.jpg" alt="anillo de oro 2" />
+  <img src="img/anillo de oro3.jpg" alt="anillo de oro 3" />
+  <img src="img/anillo de oro4.jpg" alt="anillo de oro 4" />
+  <img src="img/anillo de oro5.jpg" alt="anillo de oro 5" />
+  <img src="img/anillo de oro6.jpg" alt="anillo de oro 6" />
+  <img src="img/anillo de oro7.jpg" alt="anillo de oro 7" />
+  <img src="img/anillo de oro8.jpg" alt="anillo de oro 8" />
+  <img src="img/anillo de oro9.jpg" alt="anillo de oro 9" />
+  <img src="img/anillo de oro10.jpg" alt="anillo de oro 10" />
 </section>
 
 <section id="collares">
   <h2>Collares</h2>
-  <!-- Aquí van las imágenes de collares -->
+  <img src="img/collar oro1.jpg" alt="collar oro 1" />
+  <img src="img/collar oro2.jpg" alt="collar oro 2" />
+  <img src="img/collar oro3.jpg" alt="collar oro 3" />
+  <img src="img/collar oro4.jpg" alt="collar oro 4" />
 </section>
 
 <section id="aretes">
@@ -50,7 +62,7 @@
 
 <section id="manillas">
   <h2>Manillas</h2>
-  <!-- Aquí van las imágenes de manillas -->
+  <img src="img/manilla oro1.jpg" alt="manilla oro 1" />
 </section>
  <div style="text-align: center; margin-top: 30px;">
   <a href="https://wa.me/573155588648" target="_blank" style="margin-right: 15px;">
