--- a/plata.html
+++ b/plata.html
@@ -25,7 +25,8 @@
   <main>
     <h1>Joyería en Plata</h1>
     <div class="galeria-productos">
-      <!-- Aquí irán las imágenes de productos de plata -->
+  
+        
     </div>
   </main>
 
@@ -68,7 +69,18 @@
 
 <section id="aretes">
   <h2>Aretes</h2>
-  <!-- Aquí van las imágenes de aretes -->
+   <img src="img/arete p1.jpg" alt="arete p 1" />
+    <img src="img/arete p2.jpg" alt="arete p 2" />
+    <img src="img/arete p3.jpg" alt="arete p 3" />
+    <img src="img/arete p4.jpg" alt="arete p 4" />
+    <img src="img/arete p5.jpg" alt="arete p 5" />
+    <img src="img/arete p6.jpg" alt="arete p 6" />
+    <img src="img/arete p7.jpg" alt="arete p 7" />
+    <img src="img/arete p8.jpg" alt="arete p 8" />
+    <img src="img/arete p9.jpg" alt="arete p 9" />
+    <img src="img/arete p10.jpg" alt="arete p 10" />
+    <img src="img/arete p11.jpg" alt="arete p 11" />
+    <img src="img/arete p12.jpg" alt="arete p 12" />
 </section>
 
 <section id="manillas">
